Fix slick-dots z-index bug

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -119,7 +119,7 @@ $modal-padding-large: $l-spacing;
 }
 
 .unfixed {
-  z-index: 9;
+  z-index: 15;
 }
 
 .closeWrapper {
